# singlemap

./: Cargo.toml  README.md
src/: lib.rs
src/com/: map.rs  single_loader.rs
