[package]
name = "singlemap"
version = "1.1.0"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
description = "rust single map a macro"
documentation = "https://docs.rs/singlemap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
substring="1.4.5"
once_cell="1.21.3"
parking_lot="0.12.3"
dashmap="6.1.0"